# dataidea-datasets-backend

./: .gitignore  Procfile  Profile  README.md  README_RAILWAY_DEPLOY.md  README_S3_SETUP.md  add_popular_datasets.py  pyproject.toml  railway_setup.sh  requirements.txt  test_superuser.sh
accounts/management/commands/: create_superuser.py
datasets/: admin.py  apps.py  models.py  serializers.py  signals.py  storage.py  urls.py  views.py
datasets/management/commands/: populate_datasets.py
datasets/migrations/: 0001_initial.py  0002_alter_dataset_file_alter_dataset_source_url.py
main/: settings.py  urls.py
